debug/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-oidc
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  namespace: istio-oidc
  name: istio-oidc
spec:
  clusterIP: None
  selector:
    app: istio-oidc
  ports:
  - name: grpc
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: istio-oidc
  name: istio-oidc
spec:
  selector:
    matchLabels:
      app: istio-oidc
  template:
    metadata:
      labels:
        app: istio-oidc
    spec:
      containers:
      - name: istio-oidc
        image: # TODO: Set debug image
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/config.yaml
          subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: istio-oidc
