debug/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-cluster
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: istio-oidc
        connect_timeout: 1s
        load_assignment:
          cluster_name: istio-oidc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: # TODO: Set your IP here
                    port_value: 8080
        http2_protocol_options: {}
